--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.1"
-  },
-  "name": "is-hw9-b",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Luca Deltort",
-  "license": "ISC",
-  "description": ""
+	"dependencies": {
+		"body-parser": "^1.20.3",
+		"cors": "^2.8.5",
+		"express": "^4.21.1"
+	},
+	"name": "is-hw9-b",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"No tests specified\""
+	},
+	"author": "Luca Deltort",
+	"license": "ISC",
+	"description": ""
 }
