--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
+		"start": "node index.js",
 		"test": "echo \"No tests specified\""
 	},
 	"author": "Luca Deltort",
